//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package core.net;

import "com/sandpolis/core/instance/user.proto";

option java_package = "com.sandpolis.core.net";
option optimize_for = CODE_SIZE;

/**
 * Request to add a new user.
 */
message RQ_AddUser {
    core.instance.UserConfig config = 1;
}

/**
 * Request to remove a user.
 */
message RQ_RemoveUser {

    // The ID of the user to remove
    int64 id = 1;
}

/**
 * Request to change a user's config or stats.
 */
message RQ_UserDelta {

    // The ID of the user to modify
    int64 id = 1;

    core.instance.ProtoUser delta = 2;
}
